--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Fundamentos de CSS</title>
 </head>
 <body>
+    <h1>Aprendiendo CSS</h1>
     <article id="temario-css">
         <li><a href="#prueba">Selectores básicos</a></li>
         <li><a href="#prueba">Selectores avanzados</a></li>
         <li><a href="index.html#pseudoclases">Pseudoclases</a></li><li><a href="index.html#pseudoelementos">Pseudoelementos</a></li>
         <li><a href="index.html#agrupar-selectores">Agrupación de selectores</a></li>
         <li><a href="index.html#algoritmo-css">El algoritmo de CSS</a></li>
+        <li><a href="index.html#algoritmo-css">Reseteo y normalizacion</a></li>
+        <li><a href="box-model.html">Modelo de Caja</a></li>
     </article>
     <hr>
     <article id="pseudoclases">
@@ -80,13 +84,27 @@
     <hr>
     <article id="algoritmo-css">
         <h2>Algoritmo de CSS</h2>
-        <ul>
+        <ol>
             <li>La cascada</li>
             <li>La especifidad</li>
             <li>La herencia</li>
-        </ul>
+        </ol>
+        <blockquote id="cita-marco" class="cita-marco">
+        Sé tolerante con los demás y estricto contigo mismo - <cite>Marco Aurelio</cite>
+        </blockquote>
     </article>
+    <hr>
+    <article>
+        <h2>Reseteo y normalizacion</h2>
+        <a href="index.html#temario-css">temario-css</a>
 
+    </article>
+    <hr>
+    <article>
+        <h2>Prefijos de los Navegadores</h2>
+        <a href="index.html#temario-css">temario-css</a>
+    </article>
+    <hr>
     <a href="index.html#temario-css">temario-css</a>
 
 </body>
