propiedad display,overflow,float,clear y tamaño de caja

--- a/box-model.html
+++ b/box-model.html
@@ -13,16 +13,96 @@
     <hr>
     <div class="caja-uno">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat doloremque labore nobis animi vitae, vel laudantium mollitia officia voluptate illo cupiditate dignissimos repellendus porro omnis, sint aliquid officiis nisi sit.</div>
     <div class="caja-dos">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga tempora odit quae sunt eum veniam delectus earum! Eaque mollitia eum sit quod, voluptatem repellat eius, suscipit, perferendis facilis libero nam.</div>
-    <hr>
-    <h2>Cajas de linea VS cajas de bloque</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla ipsam ducimus veritatis laboriosam repellendus minus, quos ullam perferendis laudantium incidunt modi accusantium illum sunt! Neque earum fugiat pariatur doloribus quas?</p>
-    <span class="caja-linea">Esto es una caja de linea</span>
-    <span >Esto es un span</span>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla ipsam ducimus veritatis laboriosam repellendus minus, quos ullam perferendis laudantium incidunt modi accusantium illum sunt! Neque earum fugiat pariatur doloribus quas?</p>
-    <div class="caja-bloque">Esto es una caja de bloque</div>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla ipsam ducimus veritatis laboriosam repellendus minus, quos ullam perferendis laudantium incidunt modi accusantium illum sunt! Neque earum fugiat pariatur doloribus quas?</p>
+    
     <hr>
 
-    <a href="index.html#temario-css">temario-css</a>
+    <h2>Cajas de linea VS cajas de bloque</h2>
+    <span class="caja-linea">Esto es una caja de linea</span>
+    <span >Esto es un span</span>
+    
+    <div class="caja-bloque">Esto es una caja de bloque</div>
+    <hr>
+
+    <h2>propiedad display</h2>
+    <div class="caja-none">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex non nemo sunt voluptatum temporibus numquam possimus quos deserunt illum similique! Expedita rem aliquam deserunt odit totam dignissimos nesciunt quo fugiat.    
+    </div>
+
+    <span class="caja-linea-bloque">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam similique expedita accusamus. Repudiandae asperiores dolor eius nesciunt repellat, odio saepe doloremque libero omnis eum necessitatibus ullam tenetur non debitis laudantium.
+    </span>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nam itaque atque consequatur voluptas obcaecati nobis doloribus! Repudiandae adipisci ducimus, nihil sapiente ea aliquid repellat soluta perferendis, quae porro nesciunt.</p>
+    <ul>
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item 3</li>
+        <li>item 4</li>
+    </ul>
+    <ol>
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item 3</li>
+        <li>item 4</li>
+    </ol>
+
+    <table>
+        <tr>
+            <td>celda 1</td>
+            <td>celda 2</td>
+            <td>cedla 3</td>
+        </tr>
+        <tr>
+            <td>celda 4</td>
+            <td>celda 5</td>
+            <td>celda 6</td>
+        </tr>
+        <tr>
+            <td>celda 7</td>
+            <td>celda 8</td>
+            <td>celda 9</td>
+        </tr>
+    </table>
+    <hr>
+    <h2>Propiedad Visibility</h2>
+
+    <div class="caja-none">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex non nemo sunt voluptatum temporibus numquam possimus quos deserunt illum similique! Expedita rem aliquam deserunt odit totam dignissimos nesciunt quo fugiat.    
+    </div>
+    <div class="caja-hidden">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex non nemo sunt voluptatum temporibus numquam possimus quos deserunt illum similique! Expedita rem aliquam deserunt odit totam dignissimos nesciunt quo fugiat.    
+    </div>
+    <hr>
+    <h2>Propiedad Overflow</h2>
+    <ol>
+        <li>overflow:visible</li>
+        <li>overflow:hidden</li>
+        <li>overflow:scroll</li>
+        <li>overflow:auto</li>
+    </ol>
+    <p class="overflow">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident suscipit quas quasi iste, ea, facilis porro, assumenda quidem rem ratione velit sequi neque? Excepturi veritatis, qui ipsa veniam debitis doloribus!</p>
+
+    <hr>
+    <h2>Tamaño de Caja</h2>
+    <div class="box-sizing-content">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Est voluptates consequatur consectetur dolor quis optio, quas tempora perspiciatis iste eos dolorem veniam velit quo modi cumque dolorum iusto ea ut.
+    </div>
+    <div class="box-sizing-border">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Est voluptates consequatur consectetur dolor quis optio, quas tempora perspiciatis iste eos dolorem veniam velit quo modi cumque dolorum iusto ea ut.
+    </div>
+    <article class="container-col-3">
+        <section class="item">Sección 1</section>
+        <section class="item">Sección 2</section>
+        <section class="item">Sección 3</section>
+    </article>
+
+    <hr>
+    <h2>Propiedad Float & Clear</h2>
+    <article class="container-float">
+        <section class="float-right">Este elemento flota a la derecha</section>
+        <section class="float-left">Este elemento flota a la izquierda</section>
+    </article>
+    <div class="clearfix"></div>
+    <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi tenetur soluta atque at voluptas sunt? Mollitia, iusto id cupiditate animi modi quibusdam esse delectus hic amet voluptatem incidunt nesciunt sunt?</article>
+    <a href="index.html#temario-css">temario-css👈</a>
 </body>
 </html>
