propiedad margin y posicionamiento

--- a/box-model.html
+++ b/box-model.html
@@ -104,5 +104,30 @@
     <div class="clearfix"></div>
     <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi tenetur soluta atque at voluptas sunt? Mollitia, iusto id cupiditate animi modi quibusdam esse delectus hic amet voluptatem incidunt nesciunt sunt?</article>
     <a href="index.html#temario-css">temario-css👈</a>
+
+
+    <hr>
+    <h2>Colapso de margenes verticales</h2>
+    <article class="margin-collapse">
+        <section>Secciòn 1</section>
+        <section>Secciòn 2</section>
+        <section>
+            <span>span 1</span>
+            <span>span 2</span>
+            <span>span 3</span>
+        </section>
+        <a href="index.html#temario-css">temario-css👈</a>
+        <p></p>
+    </article>
+
+    <hr>
+    <h2>Centrado de cajas</h2>
+    <article class="sitio-web">
+        <header>Cabecera</header>
+        <main>Contenido principal</main>
+        <footer>Pie de Página</footer>
+        <a href="index.html#temario-css">temario-css👈</a>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </article>
 </body>
 </html>
