--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li><a href="index.html#algoritmo-css">El algoritmo de CSS</a></li>
         <li><a href="index.html#algoritmo-css">Reseteo y normalizacion</a></li>
         <li><a href="box-model.html">Modelo de Caja</a></li>
+        <li><a href="position.html">Posicionamiento en CSS</a></li>
     </article>
     <hr>
     <article id="pseudoclases">
