posicionamiento static,relative,absolute,fixed

--- a/position.html
+++ b/position.html
@@ -10,9 +10,16 @@
 <body>
     <h1>Posicionamiento en CSS</h1>
     <div class="static">Caja estática</div>
+    <div class="relative">Caja relativa</div>
+    <div class="absolute">Caja absoluta</div>
+    <section class="relative-parent">
+        <div class="absolute-child">Caja Absoluta con Ancetro relativo</div>
+    </section>
+    <div class="fixed">Caja Fija</div>
+    <div class="sticky">Caja Pegajosa</div>
     <a href="index.html#temario-css">temario-css👈</a>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     
 </body>
 </html>
