--- a/position.html
+++ b/position.html
@@ -17,6 +17,12 @@
     </section>
     <div class="fixed">Caja Fija</div>
     <div class="sticky">Caja Pegajosa</div>
+    <section class="sticky-parent">
+        <div class="sticky-child">Caja pegajosa como hijo</div>
+    </section>
+
+    <div class="z-index-1">Probando z-indec caja 1</div>
+    <div class="z-index-2">Probando z-indec caja 2</div>
     <a href="index.html#temario-css">temario-css👈</a>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
