--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <li><a href="index.html#algoritmo-css">Reseteo y normalizacion</a></li>
         <li><a href="box-model.html">Modelo de Caja</a></li>
         <li><a href="position.html">Posicionamiento en CSS</a></li>
+        <li><a href="flexbox.html">Flexbox</a></li>
+        <li><a href="position-example.html">Ejercicios de posicionamiento en css</a></li>
+
     </article>
     <hr>
     <article id="pseudoclases">
