--- a/position.html
+++ b/position.html
@@ -23,6 +23,10 @@
 
     <div class="z-index-1">Probando z-indec caja 1</div>
     <div class="z-index-2">Probando z-indec caja 2</div>
+
+    <section class="z-index-parent">
+        <div class="z-index-child">Hijo z-index</div>
+    </section>
     <a href="index.html#temario-css">temario-css👈</a>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
