--- a/flexbox.html
+++ b/flexbox.html
@@ -8,6 +8,39 @@
     <link rel="stylesheet" href="/css/flexbox.css">
 </head>
 <body>
+    <section class="container">
+        <article class="item">Flex item 1</article>
+        <article class="item">Flex item 2</article>
+        <article class="item">Flex item 3</article>
+    </section>
     
+    <section class="container">
+        <article class="item">Flex item 1</article>
+        <article class="item">Flex item 2</article>
+        <article class="item">Flex item 3</article>
+    </section>
+    
+    <section class="container">
+        <article class="item">item 1</article>
+        <article class="item">item 2</article>
+        <article class="item">item 3</article>
+        <article class="item">item 4</article>
+        <article class="item">item 5</article>
+        <article class="item">item 6</article>
+        <article class="item">item 7</article>
+        <article class="item">item 8</article>
+        <article class="item">item 9</article>
+        <article class="item">item 10</article>
+        <article class="item">item 11</article>
+        <article class="item">item 12</article>
+        <article class="item">item 13</article>
+        <article class="item">item 14</article>
+        <article class="item">item 15</article>
+        <article class="item">item 16</article>
+        <article class="item">item 17</article>
+        <article class="item">item 18</article>
+        <article class="item">item 19</article>
+    </section>
+    <a href="index.html#temario-css">temario-css👈</a>
 </body>
 </html>
