order y align-self

--- a/flexbox.html
+++ b/flexbox.html
@@ -12,6 +12,8 @@
         <article class="item">Flex item 1</article>
         <article class="item">Flex item 2</article>
         <article class="item">Flex item 3</article>
+        <article class="item">Flex item 4</article>
+        <article class="item">Flex item 5</article>
     </section>
     <section class="container">
         <article class="item">Flex item 1</article>
