ejemplo practico con flexbox

--- a/flexbox-artesana.html
+++ b/flexbox-artesana.html
@@ -32,6 +32,10 @@
             <article class="flex-items">item 19</article>
         </section>
     </div>
+
+    
+    <a href="ejemplosPracticos-flexbox.html">Ejemplo Practico con Flexbox</a>
+    <hr>
     <a href="index.html#temario-css">temario-css</a>
 </body>
 </html>
