--- a/flexbox.html
+++ b/flexbox.html
@@ -40,7 +40,7 @@
         <article class="item">item 17</article>
         <article class="item">item 18</article>
     </section>
-    <a href="ejercicio-flexbox.html">Ejercicio de FLEXBOX</a>
+    <a href="flexbox-bootstrap.html">Ejercicio de FLEXBOX</a>
     <br>
     <a href="index.html#temario-css">temario-css👈</a>
 </body>
