ejemplo practico-flexbox

--- a/ejemplosPracticos-flexbox.html
+++ b/ejemplosPracticos-flexbox.html
@@ -16,16 +16,19 @@
                 <li><a href="#">Sección 2</a></li>
                 <li><a href="#">Sección 3</a></li>
                 <li><a href="#">Sección 4</a></li>
+                <li><a href="#">Sección 4</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <h2>Contenido</h2>
+        <h1>Contenido</h1>
 
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim voluptates facilis eligendi possimus veniam dolor. Tenetur labore voluptas reiciendis laborum neque facere soluta alias. Enim sint reprehenderit quibusdam error. Harum?</p>
+        <article class="hero-image">
+            <div>
+                <h1>Flexbos es weno</h1>
+            </div>
+        </article>
     </main>
 
     <footer class="titulares">
