--- a/ejemplosPracticos-flexbox.html
+++ b/ejemplosPracticos-flexbox.html
@@ -30,7 +30,45 @@
             </div>
         </article>
     </main>
-
+    <section class="flex-container">
+        <article class="flex-item">
+            <h2>Tìtulo</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet aspernatur quod eius, fuga aperiam, iure soluta hic, vitae dolorum laborum mollitia. Cupiditate labore natus voluptates fuga at officiis, doloribus temporibus?</p>
+        </article>
+        <article class="flex-item">
+            <img src="https://placeimg.com/400/400/people" alt="">
+        </article>
+    </section>
+    <section class="flex-container flex-row-reverse">
+        <article class="flex-item ">
+            <h2>Tìtulo</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet aspernatur quod eius, fuga aperiam, iure soluta hic, vitae dolorum laborum mollitia. Cupiditate labore natus voluptates fuga at officiis, doloribus temporibus?</p>
+        </article>
+        <article class="flex-item">
+            <img src="https://placeimg.com/400/400/arch" alt="">
+        </article>
+    </section>
+    <section class="flex-responsive">
+        <article class="flex-responsive-item">Item responsivo 1</article>
+        <article class="flex-responsive-item">Item responsivo 2</article>
+        <article class="flex-responsive-item">Item responsivo 3</article>
+        <article class="flex-responsive-item">Item responsivo 4</article>
+        <article class="flex-responsive-item">Item responsivo 5</article>
+        <article class="flex-responsive-item">Item responsivo 6</article>
+        <article class="flex-responsive-item">Item responsivo 7</article>
+        <article class="flex-responsive-item">Item responsivo 8</article>
+        <article class="flex-responsive-item">Item responsivo 9</article>
+        <article class="flex-responsive-item">Item responsivo 10</article>
+        <article class="flex-responsive-item">Item responsivo 11</article>
+        <article class="flex-responsive-item">Item responsivo 12</article>
+        <article class="flex-responsive-item">Item responsivo 13</article>
+        <article class="flex-responsive-item">Item responsivo 14</article>
+        <article class="flex-responsive-item">Item responsivo 15</article>
+        <article class="flex-responsive-item">Item responsivo 16</article>
+        <article class="flex-responsive-item">Item responsivo 17</article>
+        <article class="flex-responsive-item">Item responsivo 18</article>
+        <article class="flex-responsive-item">Item responsivo 19</article>
+    </section>
     <footer class="titulares">
         <h2>Sticky Footer</h2>
         <a href="index.html#temario-css">temario-css 👀</a>
