efecto sticky tipo diapositiva y efecto modal

--- a/index.html
+++ b/index.html
@@ -109,6 +109,15 @@
         <a href="index.html#temario-css">temario-css</a>
     </article>
     <hr>
+    <h2 id="accesibilidad">Accesibilidad web</h2>
+    <h3 role="title">Las estaciones del año</h3>
+    <ul role="link">
+        <li role="listitem" >Primavera</li>
+        <li role="listitem">Verano</li>
+        <li role="listitem">Otoño</li>
+        <li role="listitem">Invierno</li>
+    </ul>
+    <a role="link" href="#" target="_blank">Para mas información...</a>
     <a href="index.html#temario-css">temario-css</a>
 
 </body>
