--- a/position-example.html
+++ b/position-example.html
@@ -8,12 +8,87 @@
     <link rel="stylesheet" href="/css/position-example.css">
 </head>
 <body>
-    <h1>Ejercicios de posicionamiento</h1>
-    <h2>Cabecera Fija vs Cabecera pegajosa</h2>
-    <header>
+    <div class="hero-image">
+
+    </div>
+    <header class="header sticky-top">
         <div>Contenido de la cabecera</div>
     </header>
-
+    <h1>Ejercicios de posicionamiento</h1>
+    <h2>Cabecera Fija vs Cabecera pegajosa</h2>
+    <h2>Efecto sticky tipo slides</h2>
+    <h2>Efecto de ventana modal / menú movil</h2>
+    <section class="slides">
+        
+    <article class="slide">
+        <h3 class="slide-tittle">Titulo de la seccion</h3>
+        <div class="slide-content">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur expedita itaque, labore animi eveniet fuga quos placeat hic tenetur maxime aliquid perspiciatis necessitatibus repellat illo eligendi at eos officia ratione.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur expedita itaque, labore animi eveniet fuga quos placeat hic tenetur maxime aliquid perspiciatis necessitatibus repellat illo eligendi at eos officia ratione.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur expedita itaque, labore animi eveniet fuga quos placeat hic tenetur maxime aliquid perspiciatis necessitatibus repellat illo eligendi at eos officia ratione.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur expedita itaque, labore animi eveniet fuga quos placeat hic tenetur maxime aliquid perspiciatis necessitatibus repellat illo eligendi at eos officia ratione.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur expedita itaque, labore animi eveniet fuga quos placeat hic tenetur maxime aliquid perspiciatis necessitatibus repellat illo eligendi at eos officia ratione.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur expedita itaque, labore animi eveniet fuga quos placeat hic tenetur maxime aliquid perspiciatis necessitatibus repellat illo eligendi at eos officia ratione.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur expedita itaque, labore animi eveniet fuga quos placeat hic tenetur maxime aliquid perspiciatis necessitatibus repellat illo eligendi at eos officia ratione.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur expedita itaque, labore animi eveniet fuga quos placeat hic tenetur maxime aliquid perspiciatis necessitatibus repellat illo eligendi at eos officia ratione.</p>
+        </div>
+    </article>
+        <article class="slide">
+            <h3 class="slide-tittle">Titulo de la seccion</h3>
+            <div class="slide-content">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur expedita itaque, labore animi eveniet fuga quos placeat hic tenetur maxime aliquid perspiciatis necessitatibus repellat illo eligendi at eos officia ratione.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur expedita itaque, labore animi eveniet fuga quos placeat hic tenetur maxime aliquid perspiciatis necessitatibus repellat illo eligendi at eos officia ratione.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur expedita itaque, labore animi eveniet fuga quos placeat hic tenetur maxime aliquid perspiciatis necessitatibus repellat illo eligendi at eos officia ratione.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur expedita itaque, labore animi eveniet fuga quos placeat hic tenetur maxime aliquid perspiciatis necessitatibus repellat illo eligendi at eos officia ratione.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur expedita itaque, labore animi eveniet fuga quos placeat hic tenetur maxime aliquid perspiciatis necessitatibus repellat illo eligendi at eos officia ratione.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur expedita itaque, labore animi eveniet fuga quos placeat hic tenetur maxime aliquid perspiciatis necessitatibus repellat illo eligendi at eos officia ratione.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur expedita itaque, labore animi eveniet fuga quos placeat hic tenetur maxime aliquid perspiciatis necessitatibus repellat illo eligendi at eos officia ratione.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur expedita itaque, labore animi eveniet fuga quos placeat hic tenetur maxime aliquid perspiciatis necessitatibus repellat illo eligendi at eos officia ratione.</p>
+            </div>
+        </article>
+        <article class="slide">
+            <h3 class="slide-tittle">Titulo de la seccion</h3>
+            <div class="slide-content">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur expedita itaque, labore animi eveniet fuga quos placeat hic tenetur maxime aliquid perspiciatis necessitatibus repellat illo eligendi at eos officia ratione.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur expedita itaque, labore animi eveniet fuga quos placeat hic tenetur maxime aliquid perspiciatis necessitatibus repellat illo eligendi at eos officia ratione.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur expedita itaque, labore animi eveniet fuga quos placeat hic tenetur maxime aliquid perspiciatis necessitatibus repellat illo eligendi at eos officia ratione.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur expedita itaque, labore animi eveniet fuga quos placeat hic tenetur maxime aliquid perspiciatis necessitatibus repellat illo eligendi at eos officia ratione.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur expedita itaque, labore animi eveniet fuga quos placeat hic tenetur maxime aliquid perspiciatis necessitatibus repellat illo eligendi at eos officia ratione.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur expedita itaque, labore animi eveniet fuga quos placeat hic tenetur maxime aliquid perspiciatis necessitatibus repellat illo eligendi at eos officia ratione.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur expedita itaque, labore animi eveniet fuga quos placeat hic tenetur maxime aliquid perspiciatis necessitatibus repellat illo eligendi at eos officia ratione.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur expedita itaque, labore animi eveniet fuga quos placeat hic tenetur maxime aliquid perspiciatis necessitatibus repellat illo eligendi at eos officia ratione.</p>
+            </div>
+        </article>
+        <article class="slide">
+            <h3 class="slide-tittle">Titulo de la seccion</h3>
+            <div class="slide-content">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur expedita itaque, labore animi eveniet fuga quos placeat hic tenetur maxime aliquid perspiciatis necessitatibus repellat illo eligendi at eos officia ratione.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur expedita itaque, labore animi eveniet fuga quos placeat hic tenetur maxime aliquid perspiciatis necessitatibus repellat illo eligendi at eos officia ratione.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur expedita itaque, labore animi eveniet fuga quos placeat hic tenetur maxime aliquid perspiciatis necessitatibus repellat illo eligendi at eos officia ratione.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur expedita itaque, labore animi eveniet fuga quos placeat hic tenetur maxime aliquid perspiciatis necessitatibus repellat illo eligendi at eos officia ratione.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur expedita itaque, labore animi eveniet fuga quos placeat hic tenetur maxime aliquid perspiciatis necessitatibus repellat illo eligendi at eos officia ratione.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur expedita itaque, labore animi eveniet fuga quos placeat hic tenetur maxime aliquid perspiciatis necessitatibus repellat illo eligendi at eos officia ratione.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur expedita itaque, labore animi eveniet fuga quos placeat hic tenetur maxime aliquid perspiciatis necessitatibus repellat illo eligendi at eos officia ratione.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur expedita itaque, labore animi eveniet fuga quos placeat hic tenetur maxime aliquid perspiciatis necessitatibus repellat illo eligendi at eos officia ratione.</p>
+            </div>
+        </article>
+        <article id="modal-1" class="modal-window">
+            <h3 class="modal-tittle">Ventana modal</h3>
+            <div class="modal-content">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta assumenda laborum, numquam iusto quo ipsum ex, facere quam doloremque hic quia nihil incidunt sed consectetur exercitationem molestiae dicta neque totam?
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta assumenda laborum, numquam iusto quo ipsum ex, facere quam doloremque hic quia nihil incidunt sed consectetur exercitationem molestiae dicta neque totam?
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta assumenda laborum, numquam iusto quo ipsum ex, facere quam doloremque hic quia nihil incidunt sed consectetur exercitationem molestiae dicta neque totam?
+                </p>
+            </div>
+            <a href="#cerrar">Cerrar Modal</a>
+        </article>
+        <a href="#modal-1" class="modal-link">Abrir Modal</a>
+    </section>
     <a href="index.html#temario-css">temario-css👈</a>
 </body>
 </html>
