--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li><a href="position.html">Posicionamiento en CSS</a></li>
         <li><a href="flexbox.html">Flexbox</a></li>
         <li><a href="position-example.html">Ejercicios de posicionamiento en css</a></li>
+        <li><a href="colores.html">Colores en CSS</a></li>
 
     </article>
     <hr>
